--- a/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
+++ b/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
@@ -27,5 +27,6 @@ draft: true
   - 让 AI 为你打工: https://www.zhihu.com/roundtable/aiworksforu/latest-all
     - [有哪些 AI 工具能帮你更高效地完成工作？](https://www.zhihu.com/question/588712985/answer/3202967808)
     - [有哪些比较新奇的 AI 应用工具？](https://www.zhihu.com/question/619132710/answer/3202977402)
+    - [人工智能那么火~如今 AI 的应用场景都有哪些？](https://www.zhihu.com/question/282715644/answer/3203014705)
 - [电鸭社区](https://eleduck.com/)
   - 分享区域: https://eleduck.com/posts/OGfxYV
