--- a/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
+++ b/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
@@ -30,3 +30,4 @@ draft: true
     - [人工智能那么火~如今 AI 的应用场景都有哪些？](https://www.zhihu.com/question/282715644/answer/3203014705)
 - [电鸭社区](https://eleduck.com/)
   - 分享区域: https://eleduck.com/posts/OGfxYV
+- [V2EX(2023.09.23 后才能够发帖子)](https://v2ex.com/)
