--- a/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
+++ b/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
@@ -33,3 +33,5 @@ draft: true
 - [电鸭社区](https://eleduck.com/)
   - 分享区域: https://eleduck.com/posts/OGfxYV
 - [V2EX(2023.09.23 后才能够发帖子)](https://v2ex.com/)
+- 小红书: https://www.xiaohongshu.com/user/profile/6457e731000000001f0323af
+- B 站: https://space.bilibili.com/137975681
