--- a/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
+++ b/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
@@ -23,6 +23,8 @@ draft: true
 
 ## 宣传渠道
 
+### 社区网站
+
 - [知乎](https://www.zhihu.com/hot)
   - 让 AI 为你打工: https://www.zhihu.com/roundtable/aiworksforu/latest-all
     - [有哪些 AI 工具能帮你更高效地完成工作？](https://www.zhihu.com/question/588712985/answer/3202967808)
@@ -33,5 +35,8 @@ draft: true
 - [电鸭社区](https://eleduck.com/)
   - 分享区域: https://eleduck.com/posts/OGfxYV
 - [V2EX(2023.09.23 后才能够发帖子)](https://v2ex.com/)
+
+### 个人自媒体
+
 - 小红书: https://www.xiaohongshu.com/user/profile/6457e731000000001f0323af
 - B 站: https://space.bilibili.com/137975681
