--- a/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
+++ b/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
@@ -41,3 +41,7 @@ draft: true
 - 小红书: https://www.xiaohongshu.com/user/profile/6457e731000000001f0323af
 - B 站: https://space.bilibili.com/137975681
 - 抖音: https://www.douyin.com/user/MS4wLjABAAAAaUOJaUFXB9VTmjjQaKCk2rjrJa9xl-rkm07FxU-Ia2g
+
+## 学习对象
+
+- https://bibigpt.co/
