--- a/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
+++ b/blog/2023-09-08-marketing-宣传物料/工具对外宣传资料.md
@@ -36,6 +36,7 @@ draft: true
   - 分享区域: https://eleduck.com/posts/OGfxYV
 - V2EX(2023.09.23 后才能够发帖子):(https://v2ex.com/
 - 樱花诀: https://www.lka.top/yinghuajue
+- 少数派(需要翻墙回国): https://sspai.com/
 
 ### 个人自媒体
 
