--- a/docs/1-intro/2-v0.1.30-版本变动设置.md
+++ b/docs/1-intro/2-v0.1.30-版本变动设置.md
@@ -10,6 +10,10 @@
 
 ## 构建个人本地搜索数据库
 
+:::tip 文档格式支持
+目前仅支持 .text 与 .md 文档的识别与读取。
+:::
+
 ![](./img/2-v0.1.30/2023-10-16-img-2-setup-docsearch-database.gif)
 
 ## 选择 `个人文档助手`，提出你的问题
