--- a/docs/1-intro/5-v0.1.32-new-version.md
+++ b/docs/1-intro/5-v0.1.32-new-version.md
@@ -1,6 +1,10 @@
 # v0.1.32 版本变动设置
 
-由于版本改动比较大，如果您碰到无法刷新的问题，请尝试重制本地数据库。
+:::info
+推荐奖励机制仅支持国内。
+:::
+
+由于 [v0.1.32 版本](../8-product-release/index.md#2023-10-29-v0132-全新奖励机制与性能优化)改动较大，如果您碰到无法刷新的问题，请尝试重制本地数据库。
 
 重置方法是，在电脑的右上角或右下角找到软件的图标，右键打开菜单选择‘重置所有本地存储’，之后重新打开软件即可，或者到设置界面的‘重置界面’点击重置所有数据。
 
