--- a/docs/1-intro/6-v0.1.32-new-version.md
+++ b/docs/1-intro/6-v0.1.32-new-version.md
@@ -1,3 +1,5 @@
+import ContactUs from "../9-contact-us.md"
+
 # v0.1.32 版本变动设置
 
 :::info
@@ -13,3 +15,7 @@
 ![](../2-proudct/img/6-faq/2023-08-07-img-4-settings-reset-all-aiflow-commands.png)
 
 ![](../2-proudct/img/6-faq/2023-08-07-img-5-settings-reset-all-aiflow-commands-2.png)
+
+## 联系我们
+
+<ContactUs/>
